Player profile now does nl2br and is twice as tall as before. Stats page textarea no longer adds whitespace to everything because of code formatting. Stats page profile preview fixed, caused by bad attribute quoting.

--- a/deploy/www/css/style.css
+++ b/deploy/www/css/style.css
@@ -445,7 +445,7 @@ table.playerTable .Black, .player-info .Black {
 .profile-message{
     margin: .1em auto .1em;
     width: 80%;
-    max-height: 3em;
+    max-height: 6em;
     overflow:auto;
 }
 
